--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewsFlash | Post</title>
+    <title>Boldlygentle | Post</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon.png">
     <!-- Remix icons -->
@@ -18,7 +18,7 @@
     <header class="header">
         <nav class="navbar container" id="navbar">
             <a href="./index.html">
-                <h2 class="logo">NewsFlash</h2>
+                <h2 class="logo">Boldlygentle</h2>
             </a>
             <div class="menu" id="menu">
                 <ul class="list">
